--- a/fr/html/libs/gates/basic.html
+++ b/fr/html/libs/gates/basic.html
@@ -439,7 +439,7 @@
           Bord est&nbsp;:
         </dt>
         <dd>
-            La sortie de la porte, dont la valeur est calculée sur la base des entrées actuelles comme décris ci-dessus et le nombre de bits est défini par l'attribut <b class="property">largeur de données</b>.
+            La sortie de la porte, dont la valeur est calculée sur la base de l'état des entrées comme décris ci-dessus et le nombre de bits est défini par l'attribut <b class="property">largeur de données</b>.
         </dd>
       </dl>
 	  </div>
