--- a/fr/html/libs/io/led.html
+++ b/fr/html/libs/io/led.html
@@ -77,7 +77,7 @@
             Couleur à afficher lorsque la valeur d'entrée est active.
           </dd>
 		  <dt class="lib">
-            Couleur eteinte
+            Couleur éteinte
           </dt>
           <dd>
             Couleur à afficher lorsque la valeur d'entrée n'est pas active.
