--- a/libstatus.html
+++ b/libstatus.html
@@ -1084,7 +1084,7 @@
 		<td align="left">LED</td>
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/libs/io/led.html">_V</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/io/led.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/io/led.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/led.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/io/led.html">__</a></td>
 		<td align="center" class="needtask"><a href="./ru/html/libs/io/led.html">__</a></td>
@@ -1135,7 +1135,7 @@
 		<td align="left">7-Segment Display</td>
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/libs/io/7seg.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/io/7seg.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/io/7seg.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/7seg.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/io/7seg.html">__</a></td>
 		<td align="center" class="needtask"><a href="./ru/html/libs/io/7seg.html">__</a></td>
@@ -1152,7 +1152,7 @@
 		<td align="left">Hex Digit Display</td>
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/libs/io/hexdig.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/io/hexdig.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/io/hexdig.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/hexdig.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/io/hexdig.html">__</a></td>
 		<td align="center" class="needtask"><a href="./ru/html/libs/io/hexdig.html">__</a></td>
@@ -1169,7 +1169,7 @@
 		<td align="left">LED Matrix</td>
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/libs/io/dotmat.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/io/dotmat.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/io/dotmat.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/dotmat.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/io/dotmat.html">__</a></td>
 		<td align="center" class="needtask"><a href="./ru/html/libs/io/dotmat.html">__</a></td>
@@ -1186,7 +1186,7 @@
 		<td align="left">TTY</td>
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/libs/io/tty.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/io/tty.html">__</a></td>
+		<td align="center" class="good"><a href="./fr/html/libs/io/tty.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/tty.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/io/tty.html">__</a></td>
 		<td align="center" class="needtask"><a href="./ru/html/libs/io/tty.html">__</a></td>
