--- a/fr/html/libs/gates/xor.html
+++ b/fr/html/libs/gates/xor.html
@@ -449,7 +449,7 @@
           Bord est&nbsp;:
         </dt>
         <dd>
-           La sortie de la porte, dont la valeur est calculée sur la base des entrées actuelles comme décris ci-dessus et le nombre de bits est défini par l'attribut <b class="property">largeur de donnée</b>.
+           La sortie de la porte, dont la valeur est calculée sur la base de l'état des entrées comme décris ci-dessus et le nombre de bits est défini par l'attribut <b class="property">largeur de donnée</b>.
         </dd>
       </dl>
 	  </div>
