--- a/fr/html/libs/io/button.html
+++ b/fr/html/libs/io/button.html
@@ -28,7 +28,7 @@
           </tr>
           <tr>
             <td>
-              <strong>Introduction ::</strong>
+              <strong>Introduction :</strong>
             </td>
             <td>
               2.1.3
