--- a/fr/html/libs/io/ledbar.html
+++ b/fr/html/libs/io/ledbar.html
@@ -28,7 +28,7 @@
           </tr>
           <tr>
             <td>
-              <strong>Introduction ::</strong>
+              <strong>Introduction :</strong>
             </td>
             <td>
               2.1.3
@@ -85,13 +85,13 @@
             Couleur allumée
           </dt>
           <dd>
-            Couleur à afficher lorsque la valeur d'entrée est active.
+            Couleur à afficher lorsque la led est allumée.
           </dd>
 		  <dt class="lib">
             Couleur éteinte
           </dt>
           <dd>
-            Couleur à afficher lorsque la valeur d'entrée n'est pas active.
+            Couleur à afficher lorsque la led est éteinte.
           </dd>
 		  <dt class="lib">
             Persistence lumineuse
