--- a/fr/html/libs/io/portio.html
+++ b/fr/html/libs/io/portio.html
@@ -28,7 +28,7 @@
           </tr>
           <tr>
             <td>
-              <strong>Introduction ::</strong>
+              <strong>Introduction :</strong>
             </td>
             <td>
               3.2.0
@@ -48,15 +48,78 @@
         Comportement
       </h2>
       <p>
-       
-      </p>
+        <p>
+		Ce composant peut présenter un ou deux bus de donnée en entrée et/ou en sortie selon le paramètrage de la l'attribut Type de port. Il s'apparente beaucoup au composant broche avec la particularité de pouvoir associer des entrées et de sorties mais il ne permet pas l'interconnection avec des sous-circuits.
+		</p>
+		<dl>
+            <dt class="lib">
+              Entrées seulement
+            </dt>
+            <dd>
+			Le coposant se comporte comme une broche d'entrée multibit dans le schema du circuit.<br>
+			<img class="notscal" src="../../../../img-libs/portioin.png" alt="#########"><br>
+			Il est possible de cliquer avec l'outil pousser sur les broches de l'image du connecteur pour en changer l'état. Celles-ci passeront alternativement de l'état 0 a 1 puis indéfini (gris). Ce changement est illustré pas la couleur du carré représentant la broche. Le bus de sortie reflétera ce changement sur ses lignes.
+			</dd>
+			<dt class="lib">
+              Sortie seulement
+            </dt>
+            <dd>
+			  Le coposant se comporte comme une broche de sortie multibit dans le schema du circuit.<br>
+			<img class="notscal" src="../../../../img-libs/portioout.png" alt="#########"><br>
+			  Il présente simplement l'état des lignes du bus par les carrés de couleur.
+			</dd>
+			<dt class="lib">
+              E/S (activation globale)
+            </dt>
+            <dd>
+			Le coposant se comporte comme une broche de entrée/sortie multibit dans le schema du circuit.<br>
+			<img class="notscal" src="../../../../img-libs/portioenafull.png" alt="#########"><br>
+			Quand la broche de sélection du buffer controlé est a 0, il se comporte comme dans sa configuration Entrées seulement. Vous pouvez modifier l'état des broches de l'image du conecteur de la même manière.<br>
+			Quand la broche de sélection du buffer controlé est a 1, l'état du bus sera reporté sur les broches du dessins du connecteur. Attention au conflit avec les sélections que vous auriez apporté sur ces broches.<br>
+			<img class="notscal" src="../../../../img-libs/portioschema.png" alt="#########"><br>
+			On peut imaginer le schema d'une broche de ce composant comme ce qui est présenté ci-dessus.
+			</dd>
+			<dt class="lib">
+              E/S (activation bit par bit)
+            </dt>
+            <dd>
+			Le coposant se comporte comme une broche de entrée/sortie multibit dans le schema du circuit.<br>
+			<img class="notscal" src="../../../../img-libs/portioenabb.png" alt="#########"><br>
+			Le coportement est le même que précédement avec la possibilité de sélectioner bit par bit la sortie.
+			</dd>
+		</dl>
+		
       <h2>
         Broches
       </h2>
       <p>
-       
+        Note : Attention ici quand on parle d'entrée il s'agit d'une entrée vers le composant Port I/O et quand on parle de sortie il s'agit d'une sortie du composant Port I/O contrairement au rest du text.
       </p>
-      <h2>
+	  <p>
+	    Port I/O présente ses broches différement selon la configuration de la propriété  Type de port. Vous pouvez l'observer sur les figures ci-dessus.<br>
+  	  </p>
+	  <div class="attliste">
+        <dl>
+          <dt class="lib">
+            Bord Nord, avec un buffer pointant vers le haut.
+          </dt>
+          <dd>
+            Sortie : Bus de sortie du port. Largeur de données en bit selon l'attribut Nombre de broches.
+          </dd>
+          <dt class="lib">
+            Bord Nord, avec un buffer pointant vers le bas.
+          </dt>
+          <dd>
+            Entrée : Bus d'entrle du port. Largeur de données en bit selon l'attribut Nombre de broches.
+          </dd>
+		  <dt class="lib">
+            Bord Nord vers l'ouest du buffer controlé pointant vers le bas.
+          </dt>
+          <dd>
+            Entrée : Autorisation - Signal autorisant l'entrée des données. Largeur de données en bit 1 si la propriété Type de port est E/S (activation globale) et largeur de données en bit selon l'attribut Nombre de broches si la propriété Type de port est E/S (activation bit par bit).
+          </dd>
+        </dl>
+	  <h2>
         Attributs
       </h2>
       <p>
@@ -101,19 +164,19 @@
             Détermine si l'étiquette est visible ou non.
           </dd>
 		  <dt class="lib">
-            Number of pins
+            Nombre de broches
           </dt>
           <dd>
-            Determines the number of pins in the component
+            Détermine le nombre de broches dans le composant.
           </dd>
 		   <dt class="lib">
-            Port type
+            Type de port
           </dt>
           <dd>
-            <var>Input only</var>All pins are inputs.<br>
-			<var>Output only</var>All pins are output.<br>
-			<var>Output single enable</var>pins can be inputs or outputs, with an enable input to authorize the output.<br>
-			<var>Output per-bit enable</var>pins can be inputs or outputs, with one enable input per output bit to authorize the output.
+            <var>Entrée uniquement</var>Toute les broches sont des entrée dans le schema du circuit.<br>
+			<var>Sortie uniquement</var>Toute les broches sont des sortie dans le schema du circuit.<br>
+			<var>Validation unique de la sortie</var>peuvent être des entrées ou des sorties, avec une entrée de validation pour autoriser la sortie.<br>
+			<var>Activation de la sortie par bit</var> peuvent être des entrées ou des sorties, avec une entrée de validation par bit de sortie pour autoriser la sortie.
           </dd>
         </dl>
       </div>
