--- a/fr/html/libs/io/rgbvideo.html
+++ b/fr/html/libs/io/rgbvideo.html
@@ -28,7 +28,7 @@
           </tr>
           <tr>
             <td>
-              <strong>Introduction ::</strong>
+              <strong>Introduction :</strong>
             </td>
             <td>
               3.2.0
